--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,15 @@ body {
 .container--full {
   max-width: 100%;
 }
-.container--flex {
+@media (min-width: 768px) {
+  .container--flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
