--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -35,4 +35,6 @@ $color-inactive: #ffc5c5;
 $color-text-selected: #ffffff;
 $color-selected: #5932ea;
 
+$color-accessory-light: #e7e7e7;
 $color-accessory: #b5b7c0;
+$color-accessory-dark: #b5b7c0;
