--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,33 +1,66 @@
 .header {
+  background-color: $color-background-primary;
 }
 .title {
   display: flex;
   align-items: center;
+  color: $color-text-tertiary;
   font-size: rem(26);
   font-weight: 600;
-  @media (max-width: 767px) {
-    font-size: rem(36);
+  width: 23%;
+  font-size: rem(36);
+  padding: rem(20) rem(10);
+
+  @include media(sm) {
+    font-size: rem(16);
   }
+
+  @include media(md) {
+    font-size: rem(26);
+  }
+
   &__icon {
-    width: rem(37);
-    height: rem(37);
-    @media (max-width: 767px) {
-      width: rem(55);
-      height: rem(55);
+    width: rem(55);
+    height: rem(55);
+
+    @include media(sm) {
+      width: rem(37);
+      height: rem(37);
     }
   }
+
   &__version {
-    font-size: rem(10);
-    font-weight: 500;
-    margin-bottom: rem(-10);
     color: $color-accessory;
-    @media (max-width: 767px) {
+    font-weight: 500;
+    font-size: rem(14);
+    margin-bottom: rem(-15);
+
+    @include media(sm) {
+      font-size: rem(6);
+      margin-bottom: rem(-10);
+    }
+    @include media(md) {
       font-size: rem(14);
-      margin-bottom: rem(-15);
     }
   }
 }
+.welcome-text-wrapper {
+  background-color: $color-background-primary;
+  width: 77%;
+  position: relative;
+  @include media(sm) {
+    background-color: $color-background-secondary;
+  }
+}
 .welcome-text {
+  color: $color-text-tertiary;
   font-size: rem(24);
   font-weight: 500;
+
+  @include media(sm) {
+    position: absolute;
+    top: 50%;
+    left: rem(10);
+    transform: translate(rem(10), -50%);
+  }
 }
