--- a/sass/layouts/_bar.scss
+++ b/sass/layouts/_bar.scss
@@ -4,7 +4,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 23%;
+    min-width: rem(200);
+  }
+  @include media(md) {
+    min-width: rem(306);
   }
 
   .menu {
